fix parsing for comments and preamble
For preambles, it seems I had a wrong assumption. Only quoted strings
are allowed with variables & concatenations after googling a bit around.

For comments, I just made sure to trim whitespaces correctly.

--- a/samples/test.bib
+++ b/samples/test.bib
@@ -2,8 +2,9 @@
     Inspired from:
     https://www.sharelatex.com/learn/Bibliography_management_with_bibtex
 }
-@preamble{
-    Why not a preamble
+
+@preamble{ 
+    "Why not a preamble" 
 }
 
 @string(donald="Donald Knuth")
