Add a test for lowercase keys

--- a/samples/test.bib
+++ b/samples/test.bib
@@ -38,3 +38,10 @@
     title     = "Knuth: Computers and Typesetting",
     url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
 }
+
+@book{kobayashi2014differential,
+    publisher = {Princeton University Press},
+    title = {Differential geometry of complex vector bundles},
+    Author = {Kobayashi, Shoshichi},
+    year = {2014},
+}
