added test for bracket concat

--- a/samples/test.bib
+++ b/samples/test.bib
@@ -12,6 +12,7 @@
 @string{ alb = "Albert"}
 @string{ ein = "Einstein"}
 @string(ae = alb # " " # ein)
+@string{alg = "Algebraic "}
 
 @article{einstein,
     author =       ae,
@@ -44,4 +45,11 @@
     title = {Differential geometry of complex vector bundles},
     Author = {Kobayashi, Shoshichi},
     year = {2014},
+}
+
+@book{neukirch1999ant,
+    author = {Neukirch, J{\"u}rgen},
+    title = alg # {Number Theory},
+    year = {1999},
+    publisher = {Springer},
 }
